# trust-gated-agent-team

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/agents/: graph.py
backend/app/api/: routes.py  schemas.py
backend/app/chain/: database.py  hash_chain.py  models.py
backend/app/trust/: policy.py  scores.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/audit/: page.tsx
frontend/src/components/: AgentChat.tsx  ChainViewer.tsx  TrustScores.tsx
frontend/src/lib/: api.ts
tests/: test_hash_chain.py  test_policy.py
